--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="weather">
                 <ul>
                     <li><span class="weather"></span></li>
-                    <li><span class="temp"></li>
+                    <li><span class="temp"></span></li>
                     <li><span class="city_name"></span></li>
                 </ul>
             </div>
